--- a/src/app/discussion/discussion.component.html
+++ b/src/app/discussion/discussion.component.html
@@ -1,20 +1,25 @@
-<p>discussion works!</p>
-
+<h1>{{subject}}</h1>
 
 <div *ngIf="comments">
-    <li *ngFor="let comment of comments">
-        <div>
-            <a routerLink="/user/{{comment.username}}">{{ comment.username }}</a>
-            <div>{{comment.text}}</div>
-        </div>
-    </li>
+    <ul>
+        <li *ngFor="let comment of comments">
+            <div  class="spoilerCover" *ngIf="comment.isspoiler && !spoilersShown()">
+                <button (click)="showSpoilers()">Show Spoilers</button>
+            </div>
+            <div class="commentContent" *ngIf="!comment.isspoiler || spoilersShown()">
+                <a routerLink="/user/{{comment.username}}" class="username">{{ comment.username }}</a>
+                <div class="commenttext">{{comment.text}}</div>
+            </div>
+        </li>
+    </ul>
 </div>
 
 <div id="input">
+    <h3>New Comment</h3>
     <form>
-        <input type="text" placeholder="Comment" [(ngModel)]="newComment.text" [ngModelOptions]="{standalone: true}" required>
-        <input type="checkbox" [(ngModel)]="newComment.isspoiler" [ngModelOptions]="{standalone: true}">
-        <button (click)="postComment()">Comment</button>
+        <input type="text" placeholder="Comment" id="comment" [(ngModel)]="newComment.text" [ngModelOptions]="{standalone: true}" required><br>
+        <button (click)="postComment()">Post Comment</button>
+        <input type="checkbox" id="spoiler" [(ngModel)]="newComment.isspoiler" [ngModelOptions]="{standalone: true}">
+        <label>Spoiler</label>
     </form>
-
 </div>
